--- a/style.css
+++ b/style.css
@@ -146,46 +146,149 @@ nav {
 }
 
 /******************************** ABOUT SECTION *************************/
-
+/* Parent Container */
 .about {
   min-height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
+
 }
-.about-text {
-  color: white;
-  background: var(--background-color);
-  flex: 2 1 40rem;
-  justify-content: space-around;
-  z-index: 2;
+.my-works{
+    width: 80%;
+    margin: auto;
+  }
+
+.my-work h1,
+.my-work p{
+  padding: 1.5rem;
+  text-align: center;
 }
-.about-text div {
-  padding: 3rem 8rem;
+.my-work h1{
+  font-size: 6rem;
+  text-decoration: underline;
 }
-.about-text h3 {
-  padding: 2rem 0rem;
-  font-family: "Ruhl Medium";
+.my-work p{
+  font-size: 4rem;
 }
-.about-text h2 {
-  font-family: "Vibes";
-  padding: 4rem;
+.items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-.about-image {
-  flex: 1 1 40rem;
+
+.item {
   position: relative;
+  background: linear-gradient(#38d39f, #38a4d3);
+  overflow: hidden;
+  margin: 1rem;
+  box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  cursor: pointer;
 }
-.about-image h5 {
+.item::after {
+  content: "";
   position: absolute;
-  letter-spacing: 2rem;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -20%);
-}
-.about-image img {
+  display: block;
+  background: inherit;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  transform: scale(2) translateX(-75%) translateY(-75%) rotate(-28deg);
+  transition: transform 3s cubic-bezier(0.2, 1, 0.3, 1);
 }
+
+/* Bring in main color overlay */
+.item:hover:after {
+  transform: scale(2) translateX(0) translateY(0) rotate(-28deg);
+}
+
+/* Scale image on hover */
+.item:hover .item-image {
+  transform: scale(1.2);
+}
+
+/* Bring in text on hover */
+.item:hover .item-text {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.item-image {
+  height: auto;
+  transform: translateZ(0);
+  display: block;
+  transition: transform 750ms cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.item-image:before {
+  content: "";
+  display: block;
+  padding-top: 75%;
+  overflow: hidden;
+}
+
+.item-image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  line-height: 0;
+}
+
+.item-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  text-align: center;
+  z-index: 1;
+  color: #fff;
+  transform: translateY(-20%);
+  transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1),
+    transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition-delay: 300ms;
+}
+
+.item-text-wrap {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.item-text-title {
+  font-size: 2rem;
+  padding: 0 1rem;
+  margin: 5px 0 0 0;
+}
+
+.item-text-category {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  opacity: 0.7;
+  margin: 0;
+}
+
+@media (max-width: 1000px) {
+  .items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .items {
+    grid-template-columns: 1fr;
+  }
+  .item {
+    margin: 1.5rem;
+  }
+}
+
+
+
+
 
 /******************************* CONTACT SECTION ***********************/
 
@@ -321,18 +424,18 @@ footer {
 /*********************************************************************/
 /*************************** MEDIA QUERIES ***************************/
 @media screen and (max-width: 1355px) {
-  html {
-    font-size: 53%;
+  svg{
+    width: 700px;
   }
-  svg {
+  
+}
+@media screen and (max-width: 1217px) {
+  svg{
     text-align: center;
-    width: 110%;
+    display: block;
+    margin: auto;
   }
-  .splash {
-  }
-}
-@media screen and (max-width: 1050px) {
-}
+
 @media screen and (max-width: 940px) {
 }
 
@@ -358,9 +461,7 @@ footer {
   }
 
   /***** About Section ******/
-  .about-text div {
-    padding: 3rem 3rem;
-  }
+
 
   .contact img {
     display: none;
