--- a/style.css
+++ b/style.css
@@ -1,21 +1,11 @@
 /* Global Styles */
+/* font-family: 'Cormorant Garamond', serif;
+font-family: 'Monoton', cursive;
+font-family: 'Italianno', cursive; */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-@font-face {
-  font-family: "Ruhl";
-  src: url("/fonts/FrankRuhlLibre-Regular.ttf");
-}
-@font-face {
-  font-family: "Ruhl Medium";
-  src: url("/fonts/FrankRuhlLibre-Medium.ttf");
-}
-@font-face {
-  font-family: "Vibes";
-  src: url("/fonts/GreatVibes-Regular.ttf");
 }
 
 html {
@@ -26,9 +16,9 @@ html {
   --header4: calc(2.4rem + 1vw);
   --text: calc(1.5rem + 1vw);
   --big: calc(6rem + 1vw);
-  --special-color: #906272;
+  /* --special-color: #906272;
   --background-color: #414141;
-  --gray-text: #525252;
+  --gray-text: #525252; */
   scroll-behavior: smooth;
 }
 
@@ -68,14 +58,18 @@ a {
   align-items: center;
 }
 body {
-  font-family: "Ruhl", sans-serif;
+  font-family: 'Cormorant Garamond', serif;
   animation: opening 1s ease-in-out forwards;
+  cursor: none;
+
 }
 h1 {
   font-family: "Vibes", sans-serif;
 }
 
 /************* NAV SECTION *****************/
+
+
 .main-head {
   width: 95%;
   margin: auto;
@@ -86,10 +80,15 @@ nav {
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  min-height: 10vh;
+  min-height: 13vh;
 }
 #logo {
-  flex: 1 1 20rem;
+  font-family: 'Monoton', cursive;
+  margin-left: 2rem;
+  flex: 1 1 8rem;
+  color: red;
+  font-size: 6.5rem;
+  z-index: 5;
 }
 .nav-links {
   display: flex;
@@ -100,11 +99,12 @@ nav {
 
 .nav-links a {
   margin-right: 5rem;
+  font-size: 3.4rem;
 }
 
 /********************* HERO SECTION *********************/
 .hero {
-  min-height: 90vh;
+  min-height: 87vh;
   width: 95%;
   margin: auto;
   display: flex;
@@ -131,13 +131,23 @@ nav {
   right: 0%;
   z-index: -1;
   height: 100%;
+  pointer-events: none;
 }
 
 .hero-introduction h2 {
   padding: 5rem;
 }
+.name{
+  color: red;
+}
 
-.hero-introduction p {
+.hero-introduction button {
+  padding: 2rem 4rem;
+  background-image: linear-gradient(to right, #38d39f, #38a4d3, #38a4d3);
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
 }
 
 .burger,
@@ -145,17 +155,19 @@ nav {
   display: none;
 }
 
-/******************************** ABOUT SECTION *************************/
+/******************************** WORKS SECTION *************************/
 /* Parent Container */
-.about {
+.works {
   min-height: 100vh;
 
 }
 .my-works{
-    width: 80%;
+    width: 75%;
     margin: auto;
   }
-
+  .my-work h1{
+    font-family: cursive;
+  }
 .my-work h1,
 .my-work p{
   padding: 1.5rem;
@@ -271,77 +283,315 @@ nav {
   margin: 0;
 }
 
-@media (max-width: 1000px) {
-  .items {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 800px) {
-  .items {
-    grid-template-columns: 1fr;
-  }
-  .item {
-    margin: 1.5rem;
-  }
-}
-
 
 
 
 
 /******************************* CONTACT SECTION ***********************/
-
-.contact {
-  min-height: 90vh;
+.header-contact{
+  min-height: 20vh;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.form-wrapper {
-  flex: 3 1 40rem;
+.header-contact h1{
+  font-size: 6rem;
+  font-family: cursive;
+  text-decoration: underline;
 }
-.form-wrapper h2 {
-  margin: 5rem 0rem;
-}
-.form-wrapper span {
-  font-size: var(--big);
-  color: var(--special-color);
-}
-.form-wrapper label {
-  display: block;
-}
-.form-wrapper input {
-  display: block;
-  margin: 3rem 0rem;
-  background: var(--background-color);
-  color: white;
-  border: none;
-  padding: 1rem;
-}
-.form-wrapper button {
-  padding: 1rem 8rem;
-  background: var(--special-color);
-  color: white;
-  border: none;
-  width: 100%;
-}
-.contact img {
-  flex: 1 1 40rem;
-}
-.box2 {
-  background: lightblue;
+.container-contact {
+  width: 98vw;
+  min-height: 65vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0 2rem;
+  overflow: hidden;
 }
 
-/*************************** FOOTER SECTION *************************/
-footer {
-  background: var(--background-color);
-  color: white;
+.img {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  min-height: 10vh;
 }
+
+.login-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.img svg {
+  width: 500px;
+}
+
+
+
+form {
+  width: 360px;
+}
+
+.login-content img {
+  height: 100px;
+}
+
+.login-content h2 {
+  margin: 15px 0;
+  color: #333;
+  text-transform: uppercase;
+  font-size: 2.9rem;
+}
+
+.login-content .input-div {
+  position: relative;
+  display: grid;
+  grid-template-columns: 7% 93%;
+  margin: 45px 0;
+  padding: 5px 0;
+  border-bottom: 2px solid #d9d9d9;
+}
+
+.login-content .input-div.one {
+  margin-top: 0;
+}
+
+.i {
+  color: #d9d9d9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.i i {
+  transition: 0.3s;
+}
+
+.div h5 {
+  font-size: 2.5rem !important;
+}
+
+.input-div > div {
+  position: relative;
+  height: 45px;
+}
+
+.input-div > div > h5 {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #999;
+  font-size: 18px;
+  transition: 0.3s;
+}
+
+.input-div:before,
+.input-div:after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  width: 0%;
+  height: 2px;
+  background-color: #38d39f;
+  transition: 0.4s;
+}
+
+.input-div:before {
+  right: 50%;
+}
+
+.input-div:after {
+  left: 50%;
+}
+
+.input-div.focus:before,
+.input-div.focus:after {
+  width: 50%;
+}
+
+.input-div.focus > div > h5 {
+  top: -5px;
+  font-size: 15px;
+}
+
+.input-div.focus > .i > i {
+  color: #38d39f;
+}
+
+.input-div > div > input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0.5rem 0.7rem;
+  font-size: 1.2rem;
+  color: #555;
+  font-family: "poppins", sans-serif;
+}
+
+.input-div.pass {
+  margin-bottom: 4px;
+}
+
+.anchor {
+  display: block;
+  text-align: right;
+  text-decoration: none;
+  color: #999;
+  font-size: 0.9rem;
+  transition: 0.3s;
+}
+
+.anchor:hover {
+  color: #38d39f;
+}
+
+.btn-sub {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  outline: none;
+  border: none;
+  background-image: linear-gradient(to right, #38d39f, #38a4d3, #38d39f);
+  background-size: 200%;
+  font-size: 1.2rem;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  margin: 6rem 0;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.btn-sub:hover {
+  background-position: right;
+}
+
+/* FLOR ANIMATION */
+#florone {
+  animation: plant 1.5s ease infinite alternate;
+}
+
+#flortwo {
+  animation: plant 1.5s ease infinite alternate 0.5s;
+}
+
+#florthree {
+  animation: plant 1.5s ease infinite alternate 0.3s;
+}
+
+#florfour {
+  animation: plant 1.5s ease infinite alternate 0.7s;
+}
+
+#florfive {
+  animation: plant 1.5s ease infinite alternate 0.1s;
+}
+
+#florsix {
+  animation: plant 1.5s ease infinite alternate 0.5s;
+}
+
+@keyframes plant {
+  from {
+    transform: translateY(0%);
+  }
+  to {
+    transform: translateY(-10%);
+  }
+}
+/********************************* Footer *********************/
+/* I needs to add  the wave */
+.wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  width: 700px;
+  height: 400px;
+}
+.main-footer {
+  position: relative;
+  width: 98vw;
+  min-height: 15vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.first-part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.first-part h2 {
+  font-size: 4rem;
+}
+
+.middle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-social {
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  background: #f1f1f1;
+  margin: 10px;
+  border-radius: 30%;
+  box-shadow: 0 5px 15px -5px #00000070;
+  color: #38a4d3;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+.btn-social i {
+  line-height: 65px;
+  font-size: 26px;
+  transition: 0.2s linear;
+}
+.btn-social:hover i {
+  transform: scale(1.3);
+  color: #f1f1f1;
+}
+.btn-social::before {
+  content: "";
+  position: absolute;
+  width: 120%;
+  height: 120%;
+  background: linear-gradient(#38d39f, #38a4d3);
+  transform: rotate(45deg);
+  left: -110%;
+  top: 90%;
+}
+.btn-social:hover::before {
+  animation: aaa 0.7s 1;
+  top: -10%;
+  left: -10%;
+}
+@keyframes aaa {
+  0% {
+    left: -110%;
+    top: 90%;
+  }
+  50% {
+    left: 10%;
+    top: -30%;
+  }
+  100% {
+    top: -10%;
+    left: -10%;
+  }
+}
+
+
 /***************************************************************/
 /*************************  ANIMATION  ************************/
 @keyframes opening {
@@ -419,27 +669,78 @@ footer {
     transform: rotateZ(360deg);
   }
 }
-/************ END ANIMATION  *************/
+/******************************************************************************************************* CURSORR  ******************/
+.cursor {
+  width: 5rem;
+  height: 5rem;
+  border: 2px solid black;
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  transition: all 0.5s ease-in-out;
+  transition-property: background, transform;
+  transform-origin: 100% 100%;
+  z-index: 4;
+}
+.nav-active {
+  background: black;
+  transform: scale(2.2);
+}
+.cursor.explore-active {
+  background: white;
+  transform: scale(3);
+}
+.cursor-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 0.5rem;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+/* For nav-links */
+.link-grow {
+  transform: scale(2.5, 1.5); /* Equal to scaleX(2) scaleY(0.5) */
+  background: black;
+}
+
+.hovered-link {
+  color: white;
+}
+
+
+.hov{
+  z-index: 200;
+}
+
+form{
+  z-index: 150;
+}
 
 /*********************************************************************/
+/*********************************************************************/
 /*************************** MEDIA QUERIES ***************************/
-@media screen and (max-width: 1355px) {
-  svg{
+@media screen and (max-width: 1380px) {
+  .svg-me{
     width: 700px;
   }
   
 }
-@media screen and (max-width: 1217px) {
-  svg{
+@media screen and (max-width: 1225px) {
+  .svg-me{
     text-align: center;
     display: block;
     margin: auto;
+    height: 550px;
+  }
+  .hero-introduction h2{
+    padding: 4rem;
   }
 
-@media screen and (max-width: 940px) {
-}
-
 @media screen and (max-width: 844px) {
+
   .splash {
     display: none;
   }
@@ -460,22 +761,7 @@ footer {
     padding: 5rem 3rem;
   }
 
-  /***** About Section ******/
-
-
-  .contact img {
-    display: none;
-  }
-  footer ul {
-    order: 1;
-  }
-  footer h4 {
-    order: 2;
-    text-align: center;
-    padding: 1rem;
-  }
-
-  /* BURGER THING */
+  /* BURGER MENU */
   .burger {
     position: relative;
     display: block;
@@ -491,9 +777,11 @@ footer {
   }
   .nav-links a {
     color: white;
-    font-size: 6rem;
+    font-size: 5rem;
     font-family: monospace;
-    margin-bottom: 5rem !important;
+  }
+  .nav-links li {
+    margin: 2.5rem;
   }
   .nav-links {
     background: linear-gradient(#38d39f, #38a4d3);
@@ -523,11 +811,73 @@ footer {
     transform: rotateZ(-45deg) translateY(-300%);
     background: white;
   }
-
-@media screen and (max-width: 680px) {
-  svg {
+}
+/************************ WORKS SECTION *************************/
+@media (max-width: 1200px) {
+  .items {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media (max-width: 880px) {
+  .items {
+    grid-template-columns: 1fr;
+  }
+  .item {
+    margin: 1.5rem;
+  }
+}
+
+/************************ CONTACT SECTION media query *************************/
+/*****************  MEDIA QUERIES CONTACT *******************/
+@media screen and (max-width: 1000px) {
+  form {
+    width: 300px;
+  }
+
+  .img svg {
+    width: 400px;
+  }
+
+  .login-content h2 {
+    margin-bottom: 3rem !important;
+    font-size: 2.4rem;
+    margin: 8px 0;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .container-contact {
+    grid-template-columns: 1fr;
+  }
+
+  .img svg {
+    width: 300px;
+    height: 300px;
+  }
+
+  .wave {
+    display: none;
+  }
+  .main-footer {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    grid-gap: 2rem;
+  }
+  .first-part {
+    order: 2;
+    padding-bottom: 2rem;
+  }
+  .middle {
+    justify-content: center;
+    order: 1;
+  }
+
+  .insta {
+    display: none;
+  }
+}
+
 
 @media screen and (min-width: 1700px) {
   html {
